style/devices-displays.html 번역

--- a/style/devices-displays.html
+++ b/style/devices-displays.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Devices and Displays
+title: 디바이스 및 디스플레이
 ---
-<p>Android powers millions of phones, tablets, and other devices in a wide variety of screen sizes and
-form factors. By taking advantage of Android's flexible layout system, you can create apps that
-gracefully scale from large tablets to smaller phones.</p>
+<p>안드로이드는 다양한 화면 크기와 형태를 지닌 수많은 폰과 타블렛 그리고 그 외의 디바이스에 탑재되고 있습니다.
+안드로이드의 유연한 레이아웃 시스템의 장점을 활용함으로, 큰 타블렛에서 작은 폰에 이르기까지
+우아하게 커지는 앱을 만들 수 있을 것입니다.</p>
 
 
 <img src="../media/devices_displays_main.png">
@@ -14,22 +14,22 @@ gracefully scale from large tablets to smaller phones.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-<h4>Be flexible</h4>
-<p>Stretch and compress your layouts to accommodate various heights and widths.</p>
+<h4>유연해지세요</h4>
+<p>레이아웃을 늘리고 줄여 다양한 높이와 너비를 수용하세요.</p>
 
   </div>
   <div class="layout-content-col span-5">
 
-<h4>Optimize layouts</h4>
-<p>On larger devices, take advantage of extra screen real estate. Create compound views that combine
-multiple views to reveal more content and ease navigation.</p>
+<h4>레이아웃을 최적화하세요</h4>
+<p>큰 디바이스에서, 더 큰 화면의 장점을 활용하도록 하세요. 다양한 뷰를 조합한 복합 뷰를 만들어
+더 많은 컨텐트를 표시하고 편리하게 탐색할 수 있도록 해주세요.</p>
 
   </div>
   <div class="layout-content-col span-4">
 
-<h4>Assets for all</h4>
-<p>Provide resources for different screen densities (<acronym title="Dots per inch">DPI</acronym>) to
-ensure that your app looks great on any device.</p>
+<h4>모든 디바이스를 위한 어샛(assets)</h4>
+<p>앱이 어떤 디바이스에서든 멋지게 보일 수 있도록
+여러가지 화면 해상도(<acronym title="Dots per inch 인치당 도트수">DPI</acronym>)의 리소스를 제공하세요.</p>
 
   </div>
 </div>
@@ -40,12 +40,11 @@ ensure that your app looks great on any device.</p>
 </div>
 
 
-<h4>Strategies</h4>
+<h4>계획 수립</h4>
 
-<p>So where do you begin when designing for multiple screens? One approach is to work in the base
-standard (medium size, <acronym title="Medium density (160 dpi)">MDPI</acronym>) and scale it up or
-down for the other buckets. Another approach is to start with the device with the largest screen
-size, and then scale down and figure out the UI compromises you'll need to make on smaller screens.</p>
+<p>그럼 다양한 화면 크기에 맞는 디자인을 하기 위해 어디서부터 시작해야 할까요?
+한가지 방법은 기본 표준(중간 크기, <acronym title="Medium density 중간 해상도(160 dpi)">MDPI</acronym>)에서 작업한 후
+다른 크기로 크기를 키우거나 줄이는 것입니다. 다른 방법은 가장 큰 스크린의 디바이스에서 시작해
+더 작은 화면으로 크기를 절충해 줄여나가는 것입니다.</p>
 
-<p>For more detailed information on this topic, please visit <a href="http://developer.android.com/guide/practices/screens_support.html">Supporting Multiple
-Screens</a>.</p>
+<p>이 주제에 대한 더 자세한 정보를 보시려면 <a href="http://developer.android.com/guide/practices/screens_support.html">다양한 화면 지원하기</a> 페이지를 방문해주세요.</p>
