--- a/style/index.html
+++ b/style/index.html
@@ -16,8 +16,8 @@ title: Style
 </style>
 <div id="landing-graphic-container">
   <div id="text-overlay">
-    Build visually compelling apps that look great on any device. 
-    <br><br><a href="devices-displays.html" class="landing-page-link">Devices and Displays</a>
+    어떤 디바이스에서든 훌륭해 보이는 눈을 뗄 수 없이 멋진 앱을 만들어보세요.
+    <br><br><a href="devices-displays.html" class="landing-page-link">디바이스 및 디스플레이</a>
   </div>
 
   <a href="devices-displays.html">
