문체 부분 번역 끝

--- a/style/writing.html
+++ b/style/writing.html
@@ -122,7 +122,7 @@ title: 문체
 
 
 <ol><li class="value-2">
-<strong>간단하게 쓰세요.</strong> From the Location settings screen:</li></ol>
+<strong>간단하게 쓰세요.</strong> 위치 서비스 설정 화면의 경우:</li></ol>
 <div class="layout-content-row">
   <div class="layout-content-col span-6 list_item_margins">
 
@@ -131,7 +131,7 @@ title: 문체
     <table class="ui_table bad">
 <thead><tr>
 <th>
-        Use GPS satellites
+        GPS 위성 사용
         </th>
       </tr></thead>
 <tbody><tr>
@@ -166,53 +166,50 @@ title: 문체
 
 
 <ol><li class="value-3">
-<strong>친근하게 대하세요.</strong> Dialog that appears when an application
-crashes:</li></ol>
+<strong>친근하게 대하세요.</strong> 앱이 죽었을 때 화면의 경우:</li></ol>
 <div class="layout-content-row">
   <div class="layout-content-col span-6 list_item_margins">
 
-    <div class="example_label bad">Confusing and annoying&#8212;"Sorry" just rubs salt in the
-    wound.</div>
+    <div class="example_label bad">혼란스럽고 성가셔요: '죄송합니다'는 그냥 불난 집에 부채질하는 것입니다.</div>
 
     <table class="ui_table bad">
 <thead><tr>
 <th colspan="3">
-        Sorry!
+        죄송합니다.
         </th>
       </tr></thead>
 <tbody><tr>
 <td colspan="3">
-        Activity MyAppActivity (in application MyApp)
-        is not responding.
+        MyAppActivity Activity(MyApp 애플리케이션)가 응답하지 않습니다.
         </td>
       </tr></tbody>
 <tfoot><tr>
-<td width="33%">Force close</td>
-        <td width="33%">Wait</td>
-        <td width="33%">Report</td>
+<td width="33%">강제 종료</td>
+        <td width="33%">대기</td>
+        <td width="33%">신고</td>
       </tr></tfoot>
 </table>
 </div>
   <div class="layout-content-col span-6">
 
-    <div class="example_label good">Shorter, more direct, no faux-apologetic title:<br><br>
+    <div class="example_label good">짧게, 정확하게, 변명 없이:<br><br>
 </div>
 
     <table class="ui_table good">
 <thead><tr>
 <th colspan="3">
-        MyApp isn't responding.
+        MyApp이 응답하지 않습니다.
         </th>
       </tr></thead>
 <tbody><tr>
 <td colspan="3">
-        Do you want to close it?
+        닫으시겠습니까?
         </td>
       </tr></tbody>
 <tfoot><tr>
-<td width="33%">Wait</td>
-        <td width="33%">Report</td>
-        <td width="33%">Close</td>
+<td width="33%">대기</td>
+        <td width="33%">신고</td>
+        <td width="33%">확인</td>
       </tr></tfoot>
 </table>
 </div>
@@ -226,15 +223,15 @@ crashes:</li></ol>
 <div class="layout-content-row">
   <div class="layout-content-col span-6 list_item_margins">
 
-    <div class="example_label bad">Top news last</div>
+    <div class="example_label bad">중요 내용이 맨 뒤에</div>
 
     <table class="ui_table bad"><tbody><tr><td>
-    77 other people +1'd this, including Larry Page.
+    77명이 +1했고, Larry Page를 포함합니다.
     </td></tr></tbody></table>
 </div>
   <div class="layout-content-col span-6">
 
-    <div class="example_label good">Top news first</div>
+    <div class="example_label good">중요 내용 먼저</div>
 
     <table class="ui_table good"><tbody><tr><td>
     Larry Page and 77 others +1'd this.
@@ -246,18 +243,18 @@ crashes:</li></ol>
 <div class="layout-content-row">
   <div class="layout-content-col span-6 list_item_margins">
 
-    <div class="example_label bad">Task last</div>
+    <div class="example_label bad">작업 설명이 맨 뒤에</div>
 
     <table class="ui_table bad"><tbody><tr><td>
-    Touch Next to complete setup using a Wi-Fi connection.
+    '다음'을 누르면 Wi-Fi 연결을 통해 설치를 완료합니다.
     </td></tr></tbody></table>
 </div>
   <div class="layout-content-col span-6">
 
-    <div class="example_label good">Task first</div>
+    <div class="example_label good">작업 설명을 먼저</div>
 
     <table class="ui_table good"><tbody><tr><td>
-    To finish setup using Wi-Fi, touch Next.
+    설치를 Wi-Fi를 통해 완료하려면, '다음'을 누르세요.
     </td></tr></tbody></table>
 </div>
 </div>
@@ -270,37 +267,36 @@ crashes:</li></ol>
 <div class="layout-content-row">
   <div class="layout-content-col span-6 list_item_margins">
 
-    <div class="example_label bad">From a Setup Wizard screen</div>
+    <div class="example_label bad">설치 마법사</div>
 
     <table class="ui_table bad">
 <thead><tr>
 <th>
-        Signing in...
+        로그인 중...
         </th>
       </tr></thead>
 <tbody><tr>
 <td>
-        Your phone needs to communicate with<br>
-        Google servers to sign in to your account.<br>
-        This may take up to five minutes.
+        계정을 로그인하려면 구글 서버와 통신해야 합니다.<br>
+        5분 가량 걸릴 수 있습니다.
         </td>
       </tr></tbody>
 </table>
 </div>
   <div class="layout-content-col span-6">
 
-    <div class="example_label good">From a Setup Wizard screen</div>
+    <div class="example_label good">설치 마법사</div>
 
     <table class="ui_table good">
 <thead><tr>
 <th>
-        Signing in...
+        로그인 중...
         </th>
       </tr></thead>
 <tbody><tr>
 <td>
-        Your phone is contacting Google.<br>
-        This can take up to 5 minutes.
+        구글 서버와 통신하는 중입니다.<br>
+        5분 가량 걸릴 수 있습니다.
         </td>
       </tr></tbody>
 </table>
