--- a/style/devices-displays.html
+++ b/style/devices-displays.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: 디바이스 및 디스플레이
+title: 기기 및 디스플레이
 ---
-<p>안드로이드는 다양한 화면 크기와 형태를 지닌 수많은 폰과 타블렛 그리고 그 외의 디바이스에 탑재되고 있습니다.
+<p>안드로이드는 다양한 화면 크기와 형태를 지닌 수많은 폰과 타블렛 그리고 그 외의 기기에 탑재되고 있습니다.
 안드로이드의 유연한 레이아웃 시스템의 장점을 활용함으로, 큰 타블렛에서 작은 폰에 이르기까지
 우아하게 커지는 앱을 만들 수 있을 것입니다.</p>
 
@@ -21,14 +21,14 @@ title: 디바이스 및 디스플레이
   <div class="layout-content-col span-5">
 
 <h4>레이아웃을 최적화하세요</h4>
-<p>큰 디바이스에서, 더 큰 화면의 장점을 활용하도록 하세요. 다양한 뷰를 조합한 복합 뷰를 만들어
+<p>큰 기기에서는 더 큰 화면의 장점을 활용하도록 하세요. 다양한 뷰를 조합한 복합 뷰를 만들어
 더 많은 컨텐트를 표시하고 편리하게 탐색할 수 있도록 해주세요.</p>
 
   </div>
   <div class="layout-content-col span-4">
 
-<h4>모든 디바이스를 위한 어샛(assets)</h4>
-<p>앱이 어떤 디바이스에서든 멋지게 보일 수 있도록
+<h4>모든 기기를 위한 어샛(assets)</h4>
+<p>앱이 어떤 기기에서든 멋지게 보일 수 있도록
 여러가지 화면 해상도(<acronym title="Dots per inch 인치당 도트수">DPI</acronym>)의 리소스를 제공하세요.</p>
 
   </div>
@@ -44,7 +44,7 @@ title: 디바이스 및 디스플레이
 
 <p>그럼 다양한 화면 크기에 맞는 디자인을 하기 위해 어디서부터 시작해야 할까요?
 한가지 방법은 기본 표준(중간 크기, <acronym title="Medium density 중간 해상도(160 dpi)">MDPI</acronym>)에서 작업한 후
-다른 크기로 크기를 키우거나 줄이는 것입니다. 다른 방법은 가장 큰 스크린의 디바이스에서 시작해
+다른 크기로 크기를 키우거나 줄이는 것입니다. 다른 방법은 가장 큰 스크린의 기기에서 시작해
 더 작은 화면으로 크기를 절충해 줄여나가는 것입니다.</p>
 
 <p>이 주제에 대한 더 자세한 정보를 보시려면 <a href="http://developer.android.com/guide/practices/screens_support.html">다양한 화면 지원하기</a> 페이지를 방문해주세요.</p>
