--- a/style/index.html
+++ b/style/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Style
+title: 스타일
 ---
 <style>
 #landing-graphic-container {
@@ -16,8 +16,8 @@ title: Style
 </style>
 <div id="landing-graphic-container">
   <div id="text-overlay">
-    어떤 디바이스에서든 훌륭해 보이는 눈을 뗄 수 없이 멋진 앱을 만들어보세요.
-    <br><br><a href="devices-displays.html" class="landing-page-link">디바이스 및 디스플레이</a>
+    어떤 디바이스에서도 훌륭하게 보이는, 눈을 뗄 수 없을 정도로 멋진 앱을 만들어보세요.
+    <br><br><a href="devices-displays.html" class="landing-page-link">기기 및 디스플레이</a>
   </div>
 
   <a href="devices-displays.html">
