--- a/style/iconography.html
+++ b/style/iconography.html
@@ -1,20 +1,16 @@
 ---
 layout: default
-title: Iconography
+title: 아이콘 표시법
 ---
 <img src="../media/iconography_overview.png">
-<p>An icon is a graphic that takes up a small portion of screen real estate and provides a quick,
-intuitive representation of an action, a status, or an app.</p>
+<p>아이콘은 화면의 작은 부분을 차지하면서 액션, 상태, 앱을 직관적으로 표시하는 그래픽 요소입니다.</p>
 
 
 
+<h2 id="launcher">런쳐</h2>
 
-<h2 id="launcher">Launcher</h2>
 
-
-<p>The launcher icon is the visual representation of your app on the Home or All Apps screen. Since the
-user can change the Home screen's wallpaper, make sure that your launcher icon is clearly visible on
-any type of background.</p>
+<p>런쳐아이콘은 홈 또는 모든 앱 리스트 화면에서 보여집니다. 사용자는 홈의 바탕화면을 변경할 수 있기 때문에 여러분들의 런쳐아이콘은 어떠한 바탕화면에도 잘 보일 수 있게 만들어져야합니다.</p>
 
 
 <div class="layout-content-row">
@@ -36,32 +32,31 @@ any type of background.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <h4>Sizes &amp; scale</h4>
+    <h4>크기 &amp; 비율</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>Launcher icons on a mobile device must be <strong>48x48 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>.</p>
+        <p>모바일 기기에서 런쳐아이콘은 반드시 <strong>48x48 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>이어야 합니다.</p>
 </li>
       <li class="no-bullet with-icon web">
-        <p>Launcher icons for display on Google Play must be <strong>512x512 pixels</strong>.</p>
+        <p>Google Play에서 런쳐아이콘은 반드시<strong>512x512 pixels</strong>이어야 합니다.</p>
 </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <h4>Proportions</h4>
+    <h4>면적</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>Full asset, <strong>48x48 dp</strong></p>
+        <p>전체영역, <strong>48x48 dp</strong></p>
       </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-<h4>Style</h4>
-<p>Use a distinct silhouette. Three-dimensional, front view, with a slight perspective as if viewed
-from above, so that users perceive some depth.</p>
+<h4>스타일</h4>
+<p>사용자들이 입체감을 느낄 수 있도록 정면의 약간 윗쪽에서 본 3D형태의 독특한 실루엣을 사용하십시요.</p>
 
   </div>
 </div>
@@ -91,30 +86,26 @@ from above, so that users perceive some depth.</p>
 
 
 
-<h2 id="action-bar">Action Bar</h2>
+<h2 id="action-bar">액션바</h2>
 
 
 <p>
 
-Action bar icons are graphic buttons that represent the most important actions people can take
-within your app. Each one should employ a simple metaphor representing a single concept that most
-people can grasp at a glance.
-
+액션바 아이콘들은 사람들이 당신의 앱으로 끌어들이는 중요한 액션들을 표시하는 그래픽 버튼입니다. 
+각각의 아이콘은 사용자들이 한눈에 알아볼 수 있는, 심플하고 은유적인 표현을 사용해야합니다.
+ 
 </p>
 
 <p>
 
-Pre-defined glyphs should be used for certain common actions such as "refresh" and "share." The
-download link below provides a package with icons that are scaled for various screen densities and
-are suitable for use with the Holo Light and Holo Dark themes. The package also includes unstyled
-icons that you can modify to match your theme, in addition to Adobe&#174; Illustrator&#174; source
-files for further customization.
-
+"새로고침", "공유" 등의 일반적인 액션들은 미리정의된 아이콘들을 사용해야합니다. 
+아래에 있는 내려받기 경로를 통해, 다양한 크기의 화면과 Holo Light, Holo Dark 테마에서 사용할 수 있게 크기가 맞춰진 아이콘 패키지를 받으실 수 있습니다.
+그리고 패키지에는 여러분들의 테마에 맞게 수정할 수 있는 기본 아이콘들이 포함되어 있습니다. 게다가 추가수정을 위한 Adobe&#174; Illustrator&#174; 원본 파일도 포함되어 있습니다. 
 </p>
 
 <p>
 
-<a href="https://dl-ssl.google.com/android/design/Android_Design_Icons_20120229.zip">Download the Action Bar Icon Pack</a>
+<a href="https://dl-ssl.google.com/android/design/Android_Design_Icons_20120229.zip">액션바 아이콘 패키지 내려받기</a>
 
 </p>
 
@@ -138,31 +129,30 @@ files for further customization.
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <h4>Sizes &amp; scale</h4>
+    <h4>크기 &amp; 비율</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>Action bar icons for phones should be <strong>32x32 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>.</p>
+        <p>액션바 아이콘들은 폰에서 반드시 <strong>32x32 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>이어야 합니다.</p>
 </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <h4>Focal area &amp; proportions</h4>
+    <h4>초점영역 &amp; 면적</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>Full asset, <strong>32x32 dp</strong></p>
-        <p>Optical square, <strong>24x24 dp</strong></p>
+        <p>전체영역, <strong>32x32 dp</strong></p>
+        <p>표시영역, <strong>24x24 dp</strong></p>
       </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-<h4>Style</h4>
-<p>Pictographic, flat, not too detailed, with smooth curves or sharp shapes. If the graphic is thin,
-rotate it 45&#176; left or right to fill the focal space. The thickness of the strokes and negative
-spaces should be a minimum of 2 dp.</p>
+<h4>스타일</h4>
+<p>단순하게 그리고 부드러운 곡선과 매끈한 형태를 가지게 하십시요. 만약 아이콘이 얇다면, 표시영역에 채워지도록 좌 또는 우로 45&#176; 회전 하십시요.
+두꺼운 선과 표시되지 않는 공간은 최소 2dp가 되어야합니다.</p>
 
   </div>
 </div>
@@ -172,15 +162,15 @@ spaces should be a minimum of 2 dp.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-3">
 
-<h4>Colors</h4>
-<p>Colors: <strong>#333333</strong><br>
-Enabled: <strong>60%</strong> opacity<br>
-Disabled: <strong>30%</strong> opacity</p>
+<h4>색상들</h4>
+<p>색상: <strong>#333333</strong><br>
+활성화시: <strong>60%</strong> 투명도<br>
+비활성화시: <strong>30%</strong> 투명도</p>
 <div class="vspace size-1">&#160;</div>
 
-<p>Colors: <strong>#FFFFFF</strong><br>
-Enabled: <strong>80%</strong> opacity<br>
-Disabled: <strong>30%</strong> opacity</p>
+<p>색상: <strong>#FFFFFF</strong><br>
+활성화시: <strong>80%</strong> 투명도<br>
+비활성화시: <strong>30%</strong> 투명도</p>
 
   </div>
   <div class="layout-content-col span-9">
@@ -191,12 +181,11 @@ Disabled: <strong>30%</strong> opacity</p>
 
 
 
-<h2 id="small-contextual">Small / Contextual Icons</h2>
+<h2 id="small-contextual">작은 컨텍스트 아이콘들</h2>
 
 
-<p>Within the body of your app, use small icons to surface actions and/or provide status for specific
-items. For example, in the Gmail app, each message has a star icon that marks the message as
-important.</p>
+<p>여러분들의 앱안에서, 특정 아이템들을 위한 액션 또는 상태를 표시하려면 작은 아이콘들을 사용하십시요. 
+예를들면 Gmail 앱에서,각 메세지들의 중요도를 표시하기 위해 작은 별모양 아이콘을 사용합니다.</p>
 
 
 
@@ -219,30 +208,29 @@ important.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <h4>Sizes &amp; scale</h4>
+    <h4>크기 &amp; 비율</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>Small icons should be <strong>16x16 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>.</p>
+        <p>작은 아이콘들은 반드시 <strong>16x16 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>이어야 합니다.</p>
 </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <h4>Focal area &amp; proportions</h4>
+    <h4>초점영역 &amp; 면적</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>Full asset, <strong>16x16 dp</strong></p>
-        <p>Optical square, <strong>12x12 dp</strong></p>
+        <p>전체영역, <strong>16x16 dp</strong></p>
+        <p>표시영역, <strong>12x12 dp</strong></p>
       </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-<h4>Style</h4>
-<p>Neutral, flat, and simple. Filled shapes are easier to see than thin strokes. Use a single visual
-metaphor so that a user can easily recognize and understand its purpose.</p>
+<h4>스타일</h4>
+<p>단순하고 중립적인 의미를 가지게 하십시요. 색이 채워진 도형은 얇은 외곽선을 가진 것 보다 더 쉽게 눈에 들어옵니다. 사용자가 의미를 쉽게 인식하고 이해할 수 있도록 한가지 표현방식을 사용하십시요.</p>
 
   </div>
 </div>
@@ -255,9 +243,8 @@ metaphor so that a user can easily recognize and understand its purpose.</p>
     <img src="../media/iconography_small_colors.png"><div class="vspace size-2">&#160;</div>
 
 <h4>Colors</h4>
-<p>Use non-neutral colors sparingly and with purpose. For example, Gmail uses yellow in the star icon
-to indicate a bookmarked message. If an icon is actionable, choose a color that contrasts well with
-the background.</p>
+<p>비중립적인 색들은 목적에 맞게 아껴서 사용하십시요. 예를들어 Gmail은 즐겨찾기 메세지를 표시하기 위해 별표안에 노란색을 사용합니다. 
+만약 아이콘이 의미를 가진 것이라면, 배경과 잘 대조되는 색을 선택하십시요.</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -269,11 +256,10 @@ the background.</p>
 
 
 
-<h2 id="notification">Notification Icons</h2>
+<h2 id="notification">알림 아이콘들</h2>
 
 
-<p>If your app generates notifications, provide an icon that the system can display in the status bar
-whenever a new notification is available.</p>
+<p>만약 여러분들의 앱이 알림을 생성한다면, 새로운 알림이 발생할 때마다 시스템이 상태바에 표시할 수 있는 아이콘을 제공하십시요.</p>
 
 
 
@@ -296,29 +282,29 @@ whenever a new notification is available.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <h4>Sizes &amp; scale</h4>
+    <h4>크기 &amp; 비율</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>Notification icons must be <strong>24x24 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>.</p>
+        <p>알림 아이콘은 반드시 <strong>24x24 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>이어야 합니다.</p>
 </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <h4>Focal area &amp; proportions</h4>
+    <h4>초점영역 &amp; 면적</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>Full asset, <strong>24x24 dp</strong></p>
-        <p>Optical square, <strong>22x22 dp</strong></p>
+        <p>전체영역, <strong>24x24 dp</strong></p>
+        <p>표시영역, <strong>22x22 dp</strong></p>
       </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-<h4>Style</h4>
-<p>Keep the style flat and simple, using the same single, visual metaphor as your launcher icon.</p>
+<h4>스타일</h4>
+<p>여러분의 런쳐아이콘과 동일한 의미를 가지는 아이콘을 사용해서 단순 명료하게 만드십시요.</p>
 
   </div>
 </div>
@@ -328,8 +314,8 @@ whenever a new notification is available.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-<h4>Colors</h4>
-<p>Notification icons must be entirely white. Also, the system may scale down and/or darken the icons.</p>
+<h4>색상</h4>
+<p>알림아이콘들은 반드시 흰색으로만 되어야합니다. 왜냐하면 시스템이 아이콘들을 축소하거나 어둡게할 수 있기 때문입니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
