style/typography.html 번역

--- a/style/typography.html
+++ b/style/typography.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Typography
+title: 타이포그래피
 ---
 <div class="layout-content-row">
   <div class="layout-content-col span-8">
@@ -9,15 +9,14 @@ title: Typography
 </div>
   <div class="layout-content-col span-5">
 
-<p>The Android design language relies on traditional typographic tools such as scale, space, rhythm,
-and alignment with an underlying grid. Successful deployment of these tools is essential to help
-users quickly understand a screen of information. To support such use of typography, Ice Cream
-Sandwich introduced a new type family named Roboto, created specifically for the requirements of UI
-and high-resolution screens. The current TextView framework supports regular, bold, italic, and bold
-italic weights by default.</p>
+<p>안드로이드 디자인 언어는 스케일, 공백, 리듬, 기준선 격자와 같은 전통적인 타이포그래피 도구에 의존하고 있습니다.
+이러한 타이포그래피 도구는 사용자가 빠르게 화면 상의 정보를 이해할 수 있도록 돕는데 매우 중요합니다.
+이와 같은 타이포그래피를 지원하기 위해 아이스크림 샌드위치는
+UI 요구사항과 고해상도 화면을 위해 특별히 고안된 로보토(Roboto)라 이름한 새로운 글꼴을 소개했습니다.
+현재 TextView 프레임워크는 일반, 볼드, 이탤릭, 그리고 볼드 이탤릭을 기본으로 지원합니다.</p>
 
-    <img src="../media/typography_alphas.png"><p><a href="https://dl-ssl.google.com/android/design/Roboto_Hinted_20111129.zip">Download Roboto</a></p>
-<p><a href="https://dl-ssl.google.com/android/design/Roboto_Specimen_Book_20111129.pdf">Specimen Book</a></p>
+    <img src="../media/typography_alphas.png"><p><a href="https://dl-ssl.google.com/android/design/Roboto_Hinted_20111129.zip">로보토 다운로드</a></p>
+<p><a href="https://dl-ssl.google.com/android/design/Roboto_Specimen_Book_20111129.pdf">견본 문서</a></p>
 
   </div>
 </div>
@@ -27,25 +26,24 @@ italic weights by default.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>Default type colors</h4>
-<p>The Android UI uses the following default color styles: <code>textColorPrimary</code> and
-<code>textColorSecondary</code>. For light themes use <code>textColorPrimaryInverse</code> and
-<code>textColorSecondaryInverse</code>. The framework text color styles also support variants for
-touch feedback states when used inside UI elements.</p>
+<h4>기본 타입 색상</h4>
+<p>안드로이드 UI는 다음과 같은 기본 컬러 스타일을 사용합니다: <code>textColorPrimary</code>와
+<code>textColorSecondary</code>. light 테마에서는 <code>textColorPrimaryInverse</code>와
+<code>textColorSecondaryInverse</code>를 사용하세요. 이 프레임워크 텍스트 컬러 스타일은
+UI 요소 안에서 사용될 경우 터치 피드백 상태 또한 지원합니다.</p>
 
     <img src="../media/typography_defaults.png">
 </div>
   <div class="layout-content-col span-6">
 
-<h4>Typographic Scale</h4>
-<p>Contrast in type sizes can go a long way to create ordered, understandable layouts. However, too
-many different sizes in the same UI can be messy. The Android framework uses the following limited
-set of type sizes:</p>
+<h4>타이포그래피 크기</h4>
+<p>정상적인 레이아웃에서 글자 크기를 대비시키는 것은 정돈을 위해 도움이 될 수 있습니다.
+그래도 같은 UI 내의 너무 다양한 글자 크기는 지저분하게 느껴질 수 있습니다.
+따라서 안드로이드 프레임워크는 다음과 같은 제한된 글자 크기 세트를 사용하고 있습니다:</p>
 
-<img src="../media/typography_sizes.png"><p>Users can select a system-wide scaling factor for text in the Settings app. In order to support
-these accessibility features, type should be specified in scale-independent pixels
-(<acronym title="Scale-independent pixels. One sp is one pixel on a 160 dpi screen if the user's global text scale is set to 100%.">sp</acronym>)
-wherever possible. Layouts supporting scalable types should be tested against these settings.</p>
+<img src="../media/typography_sizes.png"><p>사용자는 설정 앱에서 시스템 전역에 적용되는 글꼴 확대 수준을 선택할 수 있습니다.
+이러한 접근성 기능을 지원하려면 가능한 부분은 모두 스케일 독립 픽셀(<acronym title="Scale-independent pixels. 사용자가 전역 텍스트 크기를 100%로 설정했을 경우 1sp는 160dp에서 1픽셀.">sp</acronym>) 타입으로 지정되어야 합니다.
+확대 가능한 타입으로 지정된 레이아웃은 이러한 설정에 대한 테스트가 필요합니다.</p>
 
   </div>
 </div>
