Metrics and Grids를 '길이 및 격자'로 옮김

--- a/style/metrics-grids.html
+++ b/style/metrics-grids.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Metrics and Grids
+title: 길이 및 격자
 ---
 <p>
 기기들은 겉보기 크기만 다양한 것이 아니라, 화면 밀도(<acronym title="도트 퍼 인치">DPI</acronym>)도 다양합니다.
