--- a/style/iconography.html
+++ b/style/iconography.html
@@ -1,16 +1,16 @@
 ---
 layout: default
-title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
+title: ì•„ì´ì½˜ í‘œì‹œë²•
 ---
 <img src="../media/iconography_overview.png">
-<p>¾ÆÀÌÄÜÀº È­¸éÀÇ ÀÛÀº ºÎºÐÀ» Â÷ÁöÇÏ¸é¼­ ¾×¼Ç, »óÅÂ, ¾ÛÀ» Á÷°üÀûÀ¸·Î Ç¥½ÃÇÏ´Â ±×·¡ÇÈ ¿ä¼ÒÀÔ´Ï´Ù.</p>
+<p>ì•„ì´ì½˜ì€ í™”ë©´ì˜ ìž‘ì€ ë¶€ë¶„ì„ ì°¨ì§€í•˜ë©´ì„œ ì•¡ì…˜, ìƒíƒœ, ì•±ì„ ì§ê´€ì ìœ¼ë¡œ í‘œì‹œí•˜ëŠ” ê·¸ëž˜í”½ ìš”ì†Œìž…ë‹ˆë‹¤.</p>
 
 
 
-<h2 id="launcher">·±ÃÄ</h2>
+<h2 id="launcher">ëŸ°ì³</h2>
 
 
-<p>·±ÃÄ¾ÆÀÌÄÜÀº È¨ ¶Ç´Â ¸ðµç ¾Û ¸®½ºÆ® È­¸é¿¡¼­ º¸¿©Áý´Ï´Ù. »ç¿ëÀÚ´Â È¨ÀÇ ¹ÙÅÁÈ­¸éÀ» º¯°æÇÒ ¼ö ÀÖ±â ¶§¹®¿¡ ¿©·¯ºÐµéÀÇ ·±ÃÄ¾ÆÀÌÄÜÀº ¾î¶°ÇÑ ¹ÙÅÁÈ­¸é¿¡¼­µµ Àß º¸ÀÏ ¼ö ÀÖ°Ô ¸¸µé¾îÁ®¾ß ÇÕ´Ï´Ù.</p>
+<p>ëŸ°ì³ì•„ì´ì½˜ì€ í™ˆ ë˜ëŠ” ëª¨ë“  ì•± ë¦¬ìŠ¤íŠ¸ í™”ë©´ì—ì„œ ë³´ì—¬ì§‘ë‹ˆë‹¤. ì‚¬ìš©ìžëŠ” í™ˆì˜ ë°”íƒ•í™”ë©´ì„ ë³€ê²½í•  ìˆ˜ ìžˆê¸° ë•Œë¬¸ì— ì—¬ëŸ¬ë¶„ë“¤ì˜ ëŸ°ì³ì•„ì´ì½˜ì€ ì–´ë– í•œ ë°”íƒ•í™”ë©´ì—ì„œë„ ìž˜ ë³´ì¼ ìˆ˜ ìžˆê²Œ ë§Œë“¤ì–´ì ¸ì•¼ í•©ë‹ˆë‹¤.</p>
 
 
 <div class="layout-content-row">
@@ -32,31 +32,31 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <h4>Å©±â &amp; ºñÀ²</h4>
+    <h4>í¬ê¸° &amp; ë¹„ìœ¨</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>¸ð¹ÙÀÏ ±â±â¿¡¼­ ·±ÃÄ¾ÆÀÌÄÜÀº ¹Ýµå½Ã <strong>48x48 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>ÀÌ¾î¾ß ÇÕ´Ï´Ù.</p>
+        <p>ëª¨ë°”ì¼ ê¸°ê¸°ì—ì„œ ëŸ°ì³ì•„ì´ì½˜ì€ ë°˜ë“œì‹œ <strong>48x48 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>ì´ì–´ì•¼ í•©ë‹ˆë‹¤.</p>
 </li>
       <li class="no-bullet with-icon web">
-        <p>Google Play¿¡¼­ ·±ÃÄ¾ÆÀÌÄÜÀº ¹Ýµå½Ã <strong>512x512 pixels</strong>ÀÌ¾î¾ß ÇÕ´Ï´Ù.</p>
+        <p>Google Playì—ì„œ ëŸ°ì³ì•„ì´ì½˜ì€ ë°˜ë“œì‹œ <strong>512x512 pixels</strong>ì´ì–´ì•¼ í•©ë‹ˆë‹¤.</p>
 </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <h4>¸éÀû</h4>
+    <h4>ë©´ì </h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>ÀüÃ¼¿µ¿ª, <strong>48x48 dp</strong></p>
+        <p>ì „ì²´ì˜ì—­, <strong>48x48 dp</strong></p>
       </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-<h4>½ºÅ¸ÀÏ</h4>
-<p>»ç¿ëÀÚµéÀÌ ÀÔÃ¼°¨À» ´À³¥ ¼ö ÀÖµµ·Ï Á¤¸éÀÇ ¾à°£ À­ÂÊ¿¡¼­ º» 3DÇüÅÂÀÇ µ¶Æ¯ÇÑ ½Ç·ç¿§À» »ç¿ëÇÏ½Ê½Ã¿ä.</p>
+<h4>ìŠ¤íƒ€ì¼</h4>
+<p>ì‚¬ìš©ìžë“¤ì´ ìž…ì²´ê°ì„ ëŠë‚„ ìˆ˜ ìžˆë„ë¡ ì •ë©´ì˜ ì•½ê°„ ìœ—ìª½ì—ì„œ ë³¸ 3Dí˜•íƒœì˜ ë…íŠ¹í•œ ì‹¤ë£¨ì—£ì„ ì‚¬ìš©í•˜ì‹­ì‹œìš”.</p>
 
   </div>
 </div>
@@ -86,26 +86,26 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
 
 
 
-<h2 id="action-bar">¾×¼Ç¹Ù</h2>
+<h2 id="action-bar">ì•¡ì…˜ë°”</h2>
 
 
 <p>
 
-¾×¼Ç¹Ù ¾ÆÀÌÄÜÀº ´ç½ÅÀÇ ¾Û¿¡¼­ »ç¿ëÀÚµéÀÌ ÇÒ ¼ö ÀÖ´Â °¡Àå Áß¿äÇÑ ¾×¼ÇµéÀ» Ç¥½ÃÇÏ´Â ±×·¡ÇÈ ¹öÆ°ÀÔ´Ï´Ù. 
-°¢°¢ÀÇ ¾ÆÀÌÄÜÀº »ç¿ëÀÚµéÀÌ ÇÑ´«¿¡ ¾Ë¾Æº¼ ¼ö ÀÖ´Â, ½ÉÇÃÇÏ°í ÀºÀ¯ÀûÀÎ Ç¥ÇöÀ» »ç¿ëÇØ¾ßÇÕ´Ï´Ù.
+ì•¡ì…˜ë°” ì•„ì´ì½˜ì€ ë‹¹ì‹ ì˜ ì•±ì—ì„œ ì‚¬ìš©ìžë“¤ì´ í•  ìˆ˜ ìžˆëŠ” ê°€ìž¥ ì¤‘ìš”í•œ ì•¡ì…˜ë“¤ì„ í‘œì‹œí•˜ëŠ” ê·¸ëž˜í”½ ë²„íŠ¼ìž…ë‹ˆë‹¤. 
+ê°ê°ì˜ ì•„ì´ì½˜ì€ ì‚¬ìš©ìžë“¤ì´ í•œëˆˆì— ì•Œì•„ë³¼ ìˆ˜ ìžˆëŠ”, ì‹¬í”Œí•˜ê³  ì€ìœ ì ì¸ í‘œí˜„ì„ ì‚¬ìš©í•´ì•¼í•©ë‹ˆë‹¤.
  
 </p>
 
 <p>
 
-"»õ·Î°íÄ§", "°øÀ¯" µîÀÇ ÀÏ¹ÝÀûÀÎ ¾×¼ÇµéÀº ¹Ì¸®Á¤ÀÇµÈ ¾ÆÀÌÄÜµéÀ» »ç¿ëÇØ¾ßÇÕ´Ï´Ù. 
-´Ù¾çÇÑ Å©±âÀÇ È­¸é°ú Holo Light, Holo Dark Å×¸¶¿¡¼­ »ç¿ëÇÒ ¼ö ÀÖµµ·Ï Å©±â°¡ ¸ÂÃçÁø ¾ÆÀÌÄÜ ÆÐÅ°Áö¸¦ ¾Æ·¡ÀÇ °æ·Î¿¡¼­ ¹ÞÀ¸½Ç ¼ö ÀÖ½À´Ï´Ù.
-±×¸®°í ÆÐÅ°Áö¿¡´Â ¿©·¯ºÐµéÀÇ Å×¸¶¿¡ ¸Â°Ô ¼öÁ¤ÇÒ ¼ö ÀÖ´Â ±âº» ¾ÆÀÌÄÜµéÀÌ Æ÷ÇÔµÇ¾î ÀÖ½À´Ï´Ù. °Ô´Ù°¡ Ãß°¡ ¼öÁ¤À» À§ÇÑ Adobe&#174; Illustrator&#174; ¿øº» ÆÄÀÏµµ Æ÷ÇÔµÇ¾î ÀÖ½À´Ï´Ù. 
+"ìƒˆë¡œê³ ì¹¨", "ê³µìœ " ë“±ì˜ ì¼ë°˜ì ì¸ ì•¡ì…˜ë“¤ì€ ë¯¸ë¦¬ì •ì˜ëœ ì•„ì´ì½˜ë“¤ì„ ì‚¬ìš©í•´ì•¼í•©ë‹ˆë‹¤. 
+ë‹¤ì–‘í•œ í¬ê¸°ì˜ í™”ë©´ê³¼ Holo Light, Holo Dark í…Œë§ˆì—ì„œ ì‚¬ìš©í•  ìˆ˜ ìžˆë„ë¡ í¬ê¸°ê°€ ë§žì¶°ì§„ ì•„ì´ì½˜ íŒ¨í‚¤ì§€ë¥¼ ì•„ëž˜ì˜ ê²½ë¡œì—ì„œ ë°›ìœ¼ì‹¤ ìˆ˜ ìžˆìŠµë‹ˆë‹¤.
+ê·¸ë¦¬ê³  íŒ¨í‚¤ì§€ì—ëŠ” ì—¬ëŸ¬ë¶„ë“¤ì˜ í…Œë§ˆì— ë§žê²Œ ìˆ˜ì •í•  ìˆ˜ ìžˆëŠ” ê¸°ë³¸ ì•„ì´ì½˜ë“¤ì´ í¬í•¨ë˜ì–´ ìžˆìŠµë‹ˆë‹¤. ê²Œë‹¤ê°€ ì¶”ê°€ ìˆ˜ì •ì„ ìœ„í•œ Adobe&#174; Illustrator&#174; ì›ë³¸ íŒŒì¼ë„ í¬í•¨ë˜ì–´ ìžˆìŠµë‹ˆë‹¤. 
 </p>
 
 <p>
 
-<a href="https://dl-ssl.google.com/android/design/Android_Design_Icons_20120229.zip">¾×¼Ç¹Ù ¾ÆÀÌÄÜ ÆÐÅ°Áö ³»·Á¹Þ±â</a>
+<a href="https://dl-ssl.google.com/android/design/Android_Design_Icons_20120229.zip">ì•¡ì…˜ë°” ì•„ì´ì½˜ íŒ¨í‚¤ì§€ ë‚´ë ¤ë°›ê¸°</a>
 
 </p>
 
@@ -129,30 +129,30 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <h4>Å©±â &amp; ºñÀ²</h4>
+    <h4>í¬ê¸° &amp; ë¹„ìœ¨</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>¾×¼Ç¹Ù ¾ÆÀÌÄÜµéÀº Æù¿¡¼­ ¹Ýµå½Ã <strong>32x32 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>ÀÌ¾î¾ß ÇÕ´Ï´Ù.</p>
+        <p>ì•¡ì…˜ë°” ì•„ì´ì½˜ë“¤ì€ í°ì—ì„œ ë°˜ë“œì‹œ <strong>32x32 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>ì´ì–´ì•¼ í•©ë‹ˆë‹¤.</p>
 </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <h4>ÃÊÁ¡¿µ¿ª &amp; ¸éÀû</h4>
+    <h4>ì´ˆì ì˜ì—­ &amp; ë©´ì </h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>ÀüÃ¼¿µ¿ª, <strong>32x32 dp</strong></p>
-        <p>Ç¥½Ã¿µ¿ª, <strong>24x24 dp</strong></p>
+        <p>ì „ì²´ì˜ì—­, <strong>32x32 dp</strong></p>
+        <p>í‘œì‹œì˜ì—­, <strong>24x24 dp</strong></p>
       </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-<h4>½ºÅ¸ÀÏ</h4>
-<p>´Ü¼øÇÏ°Ô ±×¸®°í ºÎµå·¯¿î °î¼±°ú ¸Å²öÇÑ ÇüÅÂ¸¦ °¡Áö°Ô ÇÏ½Ê½Ã¿ä. ¸¸¾à ¾ÆÀÌÄÜÀÌ ¾ã´Ù¸é, Ç¥½Ã¿µ¿ªÀÌ Ã¤¿öÁöµµ·Ï ÁÂ ¶Ç´Â ¿ì·Î 45&#176; È¸Àü ÇÏ½Ê½Ã¿ä.
-µÎ²¨¿î ¼±°ú Ç¥½ÃµÇÁö ¾Ê´Â °ø°£Àº ÃÖ¼Ò 2dpÀÌ»óÀÌ¾î¾ß ÇÕ´Ï´Ù.</p>
+<h4>ìŠ¤íƒ€ì¼</h4>
+<p>ë‹¨ìˆœí•˜ê²Œ ê·¸ë¦¬ê³  ë¶€ë“œëŸ¬ìš´ ê³¡ì„ ê³¼ ë§¤ëˆí•œ í˜•íƒœë¥¼ ê°€ì§€ê²Œ í•˜ì‹­ì‹œìš”. ë§Œì•½ ì•„ì´ì½˜ì´ ì–‡ë‹¤ë©´, í‘œì‹œì˜ì—­ì´ ì±„ì›Œì§€ë„ë¡ ì¢Œ ë˜ëŠ” ìš°ë¡œ 45&#176; íšŒì „ í•˜ì‹­ì‹œìš”.
+ë‘êº¼ìš´ ì„ ê³¼ í‘œì‹œë˜ì§€ ì•ŠëŠ” ê³µê°„ì€ ìµœì†Œ 2dpì´ìƒì´ì–´ì•¼ í•©ë‹ˆë‹¤.</p>
 
   </div>
 </div>
@@ -162,15 +162,15 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
 <div class="layout-content-row">
   <div class="layout-content-col span-3">
 
-<h4>»ö»óµé</h4>
-<p>»ö»ó: <strong>#333333</strong><br>
-È°¼ºÈ­½Ã: <strong>60%</strong> Åõ¸íµµ<br>
-ºñÈ°¼ºÈ­½Ã: <strong>30%</strong> Åõ¸íµµ</p>
+<h4>ìƒ‰ìƒë“¤</h4>
+<p>ìƒ‰ìƒ: <strong>#333333</strong><br>
+í™œì„±í™”ì‹œ: <strong>60%</strong> íˆ¬ëª…ë„<br>
+ë¹„í™œì„±í™”ì‹œ: <strong>30%</strong> íˆ¬ëª…ë„</p>
 <div class="vspace size-1">&#160;</div>
 
-<p>»ö»ó: <strong>#FFFFFF</strong><br>
-È°¼ºÈ­½Ã: <strong>80%</strong> Åõ¸íµµ<br>
-ºñÈ°¼ºÈ­½Ã: <strong>30%</strong> Åõ¸íµµ</p>
+<p>ìƒ‰ìƒ: <strong>#FFFFFF</strong><br>
+í™œì„±í™”ì‹œ: <strong>80%</strong> íˆ¬ëª…ë„<br>
+ë¹„í™œì„±í™”ì‹œ: <strong>30%</strong> íˆ¬ëª…ë„</p>
 
   </div>
   <div class="layout-content-col span-9">
@@ -181,11 +181,11 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
 
 
 
-<h2 id="small-contextual">ÀÛÀº ÄÁÅØ½ºÆ® ¾ÆÀÌÄÜµé</h2>
+<h2 id="small-contextual">ìž‘ì€ ì»¨í…ìŠ¤íŠ¸ ì•„ì´ì½˜ë“¤</h2>
 
 
-<p>¿©·¯ºÐµéÀÇ ¾Û¾È¿¡¼­, Æ¯Á¤ ¾ÆÀÌÅÛµéÀ» À§ÇÑ ¾×¼Ç ¶Ç´Â »óÅÂ¸¦ Ç¥½ÃÇÏ·Á¸é ÀÛÀº ¾ÆÀÌÄÜµéÀ» »ç¿ëÇÏ½Ê½Ã¿ä. 
-¿¹¸¦µé¸é Gmail ¾Û¿¡¼­´Â,°¢ ¸Þ¼¼ÁöµéÀÇ Áß¿äµµ¸¦ Ç¥½ÃÇÏ±â À§ÇØ ÀÛÀº º°¸ð¾ç ¾ÆÀÌÄÜÀ» »ç¿ëÇÕ´Ï´Ù.</p>
+<p>ì—¬ëŸ¬ë¶„ë“¤ì˜ ì•±ì•ˆì—ì„œ, íŠ¹ì • ì•„ì´í…œë“¤ì„ ìœ„í•œ ì•¡ì…˜ ë˜ëŠ” ìƒíƒœë¥¼ í‘œì‹œí•˜ë ¤ë©´ ìž‘ì€ ì•„ì´ì½˜ë“¤ì„ ì‚¬ìš©í•˜ì‹­ì‹œìš”. 
+ì˜ˆë¥¼ë“¤ë©´ Gmail ì•±ì—ì„œëŠ”,ê° ë©”ì„¸ì§€ë“¤ì˜ ì¤‘ìš”ë„ë¥¼ í‘œì‹œí•˜ê¸° ìœ„í•´ ìž‘ì€ ë³„ëª¨ì–‘ ì•„ì´ì½˜ì„ ì‚¬ìš©í•©ë‹ˆë‹¤.</p>
 
 
 
@@ -208,29 +208,29 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <h4>Å©±â &amp; ºñÀ²</h4>
+    <h4>í¬ê¸° &amp; ë¹„ìœ¨</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>ÀÛÀº ¾ÆÀÌÄÜµéÀº ¹Ýµå½Ã <strong>16x16 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>ÀÌ¾î¾ß ÇÕ´Ï´Ù.</p>
+        <p>ìž‘ì€ ì•„ì´ì½˜ë“¤ì€ ë°˜ë“œì‹œ <strong>16x16 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>ì´ì–´ì•¼ í•©ë‹ˆë‹¤.</p>
 </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <h4>ÃÊÁ¡¿µ¿ª &amp; ¸éÀû</h4>
+    <h4>ì´ˆì ì˜ì—­ &amp; ë©´ì </h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>ÀüÃ¼¿µ¿ª, <strong>16x16 dp</strong></p>
-        <p>Ç¥½Ã¿µ¿ª, <strong>12x12 dp</strong></p>
+        <p>ì „ì²´ì˜ì—­, <strong>16x16 dp</strong></p>
+        <p>í‘œì‹œì˜ì—­, <strong>12x12 dp</strong></p>
       </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-<h4>½ºÅ¸ÀÏ</h4>
-<p>´Ü¼øÇÏ°í Áß¸³ÀûÀÎ ÀÇ¹Ì¸¦ °¡Áö°Ô ÇÏ½Ê½Ã¿ä. »öÀÌ Ã¤¿öÁø µµÇüÀº ¾ãÀº ¿Ü°û¼±À» °¡Áø °Í º¸´Ù ´õ ½±°Ô ´«¿¡ µé¾î¿É´Ï´Ù. »ç¿ëÀÚ°¡ ÀÇ¹Ì¸¦ ½±°Ô ÀÎ½ÄÇÏ°í ÀÌÇØÇÒ ¼ö ÀÖµµ·Ï ÀÏ°ü¼ºÀÖ´Â ÇÑ°¡Áö Ç¥Çö¹æ½ÄÀ» »ç¿ëÇÏ½Ê½Ã¿ä.</p>
+<h4>ìŠ¤íƒ€ì¼</h4>
+<p>ë‹¨ìˆœí•˜ê³  ì¤‘ë¦½ì ì¸ ì˜ë¯¸ë¥¼ ê°€ì§€ê²Œ í•˜ì‹­ì‹œìš”. ìƒ‰ì´ ì±„ì›Œì§„ ë„í˜•ì€ ì–‡ì€ ì™¸ê³½ì„ ì„ ê°€ì§„ ê²ƒ ë³´ë‹¤ ë” ì‰½ê²Œ ëˆˆì— ë“¤ì–´ì˜µë‹ˆë‹¤. ì‚¬ìš©ìžê°€ ì˜ë¯¸ë¥¼ ì‰½ê²Œ ì¸ì‹í•˜ê³  ì´í•´í•  ìˆ˜ ìžˆë„ë¡ ì¼ê´€ì„±ìžˆëŠ” í•œê°€ì§€ í‘œí˜„ë°©ì‹ì„ ì‚¬ìš©í•˜ì‹­ì‹œìš”.</p>
 
   </div>
 </div>
@@ -243,8 +243,8 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
     <img src="../media/iconography_small_colors.png"><div class="vspace size-2">&#160;</div>
 
 <h4>Colors</h4>
-<p>ºñÁß¸³ÀûÀÎ »öµéÀº ¸ñÀû¿¡ ¸Â°Ô ¾Æ²¸¼­ »ç¿ëÇÏ½Ê½Ã¿ä. ¿¹¸¦µé¾î Gmail¿¡¼­´Â ¸Þ¼¼Áö¿¡ Áñ°ÜÃ£±â Ç¥½Ã¸¦ À§ÇØ º°Ç¥¾È¿¡ ³ë¶õ»öÀ» »ç¿ëÇÕ´Ï´Ù. 
-¸¸¾à ¾ÆÀÌÄÜÀÌ ÀÇ¹Ì¸¦ °¡Áø °ÍÀÌ¶ó¸é, ¹è°æ°ú Àß ´ëÁ¶µÇ´Â »öÀ» ¼±ÅÃÇÏ½Ê½Ã¿ä.</p>
+<p>ë¹„ì¤‘ë¦½ì ì¸ ìƒ‰ë“¤ì€ ëª©ì ì— ë§žê²Œ ì•„ê»´ì„œ ì‚¬ìš©í•˜ì‹­ì‹œìš”. ì˜ˆë¥¼ë“¤ì–´ Gmailì—ì„œëŠ” ë©”ì„¸ì§€ì— ì¦ê²¨ì°¾ê¸° í‘œì‹œë¥¼ ìœ„í•´ ë³„í‘œì•ˆì— ë…¸ëž€ìƒ‰ì„ ì‚¬ìš©í•©ë‹ˆë‹¤. 
+ë§Œì•½ ì•„ì´ì½˜ì´ ì˜ë¯¸ë¥¼ ê°€ì§„ ê²ƒì´ë¼ë©´, ë°°ê²½ê³¼ ìž˜ ëŒ€ì¡°ë˜ëŠ” ìƒ‰ì„ ì„ íƒí•˜ì‹­ì‹œìš”.</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -256,10 +256,10 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
 
 
 
-<h2 id="notification">¾Ë¸² ¾ÆÀÌÄÜµé</h2>
+<h2 id="notification">ì•Œë¦¼ ì•„ì´ì½˜ë“¤</h2>
 
 
-<p>¸¸¾à ¿©·¯ºÐµéÀÇ ¾ÛÀÌ ¾Ë¸²À» »ý¼ºÇÑ´Ù¸é, »õ·Î¿î ¾Ë¸²ÀÌ ¹ß»ýÇÒ ¶§¸¶´Ù ½Ã½ºÅÛÀÌ »óÅÂ¹Ù¿¡ Ç¥½ÃÇÒ ¼ö ÀÖ´Â ¾ÆÀÌÄÜÀ» Á¦°øÇÏ½Ê½Ã¿ä.</p>
+<p>ë§Œì•½ ì—¬ëŸ¬ë¶„ë“¤ì˜ ì•±ì´ ì•Œë¦¼ì„ ìƒì„±í•œë‹¤ë©´, ìƒˆë¡œìš´ ì•Œë¦¼ì´ ë°œìƒí•  ë•Œë§ˆë‹¤ ì‹œìŠ¤í…œì´ ìƒíƒœë°”ì— í‘œì‹œí•  ìˆ˜ ìžˆëŠ” ì•„ì´ì½˜ì„ ì œê³µí•˜ì‹­ì‹œìš”.</p>
 
 
 
@@ -282,29 +282,29 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <h4>Å©±â &amp; ºñÀ²</h4>
+    <h4>í¬ê¸° &amp; ë¹„ìœ¨</h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>¾Ë¸² ¾ÆÀÌÄÜÀº ¹Ýµå½Ã <strong>24x24 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>ÀÌ¾î¾ß ÇÕ´Ï´Ù.</p>
+        <p>ì•Œë¦¼ ì•„ì´ì½˜ì€ ë°˜ë“œì‹œ <strong>24x24 <acronym title="Density-independent pixels. One dp is one pixel on a 160 dpi screen.">dp</acronym></strong>ì´ì–´ì•¼ í•©ë‹ˆë‹¤.</p>
 </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <h4>ÃÊÁ¡¿µ¿ª &amp; ¸éÀû</h4>
+    <h4>ì´ˆì ì˜ì—­ &amp; ë©´ì </h4>
 
     <ul>
 <li class="no-bullet with-icon tablet">
-        <p>ÀüÃ¼¿µ¿ª, <strong>24x24 dp</strong></p>
-        <p>Ç¥½Ã¿µ¿ª, <strong>22x22 dp</strong></p>
+        <p>ì „ì²´ì˜ì—­, <strong>24x24 dp</strong></p>
+        <p>í‘œì‹œì˜ì—­, <strong>22x22 dp</strong></p>
       </li>
     </ul>
 </div>
   <div class="layout-content-col span-4">
 
-<h4>½ºÅ¸ÀÏ</h4>
-<p>¿©·¯ºÐÀÇ ·±ÃÄ¾ÆÀÌÄÜ°ú µ¿ÀÏÇÑ ÀÇ¹Ì¸¦ °¡Áö´Â ¾ÆÀÌÄÜÀ» »ç¿ëÇØ¼­ ´Ü¼ø ¸í·áÇÏ°Ô ¸¸µå½Ê½Ã¿ä.</p>
+<h4>ìŠ¤íƒ€ì¼</h4>
+<p>ì—¬ëŸ¬ë¶„ì˜ ëŸ°ì³ì•„ì´ì½˜ê³¼ ë™ì¼í•œ ì˜ë¯¸ë¥¼ ê°€ì§€ëŠ” ì•„ì´ì½˜ì„ ì‚¬ìš©í•´ì„œ ë‹¨ìˆœ ëª…ë£Œí•˜ê²Œ ë§Œë“œì‹­ì‹œìš”.</p>
 
   </div>
 </div>
@@ -314,8 +314,8 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-<h4>»ö»ó</h4>
-<p>¾Ë¸²¾ÆÀÌÄÜµéÀº ¹Ýµå½Ã Èò»öÀ¸·Î¸¸ µÇ¾î¾ßÇÕ´Ï´Ù. ¿Ö³ÄÇÏ¸é ½Ã½ºÅÛÀÌ ¾ÆÀÌÄÜµéÀ» Ãà¼ÒÇÏ°Å³ª ¾îµÓ°ÔÇÒ ¼ö ÀÖ±â ¶§¹®ÀÔ´Ï´Ù.</p>
+<h4>ìƒ‰ìƒ</h4>
+<p>ì•Œë¦¼ì•„ì´ì½˜ë“¤ì€ ë°˜ë“œì‹œ í°ìƒ‰ìœ¼ë¡œë§Œ ë˜ì–´ì•¼í•©ë‹ˆë‹¤. ì™œëƒí•˜ë©´ ì‹œìŠ¤í…œì´ ì•„ì´ì½˜ë“¤ì„ ì¶•ì†Œí•˜ê±°ë‚˜ ì–´ë‘¡ê²Œí•  ìˆ˜ ìžˆê¸° ë•Œë¬¸ìž…ë‹ˆë‹¤.</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -324,3 +324,5 @@ title: ¾ÆÀÌÄÜ Ç¥½Ã¹ý
 </div>
   <!-- 2 free columns -->
 </div>
+
+
