--- a/style/typography.html
+++ b/style/typography.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 타이포그래피
+title: 글꼴
 ---
 <div class="layout-content-row">
   <div class="layout-content-col span-8">
@@ -9,9 +9,9 @@ title: 타이포그래피
 </div>
   <div class="layout-content-col span-5">
 
-<p>안드로이드 디자인 언어는 스케일, 공백, 리듬, 기준선 격자와 같은 전통적인 타이포그래피 도구에 의존하고 있습니다.
-이러한 타이포그래피 도구는 사용자가 빠르게 화면 상의 정보를 이해할 수 있도록 돕는데 매우 중요합니다.
-이와 같은 타이포그래피를 지원하기 위해 아이스크림 샌드위치는
+<p>안드로이드 디자인 언어는 스케일, 공백, 리듬, 기준선 격자와 같은 전통적인 글꼴 도구에 의존하고 있습니다.
+이러한 글꼴 도구는 사용자가 빠르게 화면 상의 정보를 이해할 수 있도록 돕는데 매우 중요합니다.
+이와 같은 글꼴를 지원하기 위해 아이스크림 샌드위치는
 UI 요구사항과 고해상도 화면을 위해 특별히 고안된 로보토(Roboto)라 이름한 새로운 글꼴을 소개했습니다.
 현재 TextView 프레임워크는 일반, 볼드, 이탤릭, 그리고 볼드 이탤릭을 기본으로 지원합니다.</p>
 
@@ -36,7 +36,7 @@ UI 요소 안에서 사용될 경우 터치 피드백 상태 또한 지원합니
 </div>
   <div class="layout-content-col span-6">
 
-<h4>타이포그래피 크기</h4>
+<h4>글꼴 크기</h4>
 <p>정상적인 레이아웃에서 글자 크기를 대비시키는 것은 정돈을 위해 도움이 될 수 있습니다.
 그래도 같은 UI 내의 너무 다양한 글자 크기는 지저분하게 느껴질 수 있습니다.
 따라서 안드로이드 프레임워크는 다음과 같은 제한된 글자 크기 세트를 사용하고 있습니다:</p>
