modify the encoding - UTF-8

--- a/patterns/selection.html
+++ b/patterns/selection.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: ¼¿·º¼Ç
+title: ì…€ë ‰ì…˜
 ---
-<p>¾Èµå·ÎÀÌµå 3.0¿¡¼­ <em>±æ°Ô´©¸£±â</em>(°°Àº À§Ä¡¸¦ Àá½Ã ´©¸£´Â ÅÍÄ¡) Á¦½ºÃÄ´Â µ¥ÀÌÅÍ¸¦ ¼±ÅÃÇÏ´Â ÀÏ¹ÝÀûÀÎ Á¦½ºÃÄ·Î ¼Ò°³µÇ¾ú½À´Ï´Ù. 
-ÀÌ°ÍÀº ¿©·¯ºÐ ¾ÛÀÇ ´ÙÁß ¼±ÅÃ°ú ÄÁÅØ½ºÆ® ¾×¼Ç Ã³¸® ¹æ½Ä¿¡ ¿µÇâÀ» ÁÖ¾ú½À´Ï´Ù.</p>
+<p>ì•ˆë“œë¡œì´ë“œ 3.0ì—ì„œ <em>ê¸¸ê²Œëˆ„ë¥´ê¸°</em>(ê°™ì€ ìœ„ì¹˜ë¥¼ ìž ì‹œ ëˆ„ë¥´ëŠ” í„°ì¹˜) ì œìŠ¤ì³ëŠ” ë°ì´í„°ë¥¼ ì„ íƒí•˜ëŠ” ì¼ë°˜ì ì¸ ì œìŠ¤ì³ë¡œ ì†Œê°œë˜ì—ˆìŠµë‹ˆë‹¤. 
+ì´ê²ƒì€ ì—¬ëŸ¬ë¶„ ì•±ì˜ ë‹¤ì¤‘ ì„ íƒê³¼ ì»¨í…ìŠ¤íŠ¸ ì•¡ì…˜ ì²˜ë¦¬ ë°©ì‹ì— ì˜í–¥ì„ ì£¼ì—ˆìŠµë‹ˆë‹¤.</p>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -12,24 +12,24 @@ title: ¼¿·º¼Ç
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>¹«¾ùÀÌ ¹Ù²î¾ú´Â°¡?</h4>
-<p>ÀÌÀü¹öÀüÀÇ ¾Èµå·ÎÀÌµå¿¡¼­, ±æ°Ô´©¸£±â Á¦½ºÃÄ´Â ÄÁÅØ½ºÆ® ¸Þ´º¿¡ ¼±ÅÃµÈ ¾ÆÀÌÅÛÀÇ ÄÁ¼½Æ®½º ¾×¼ÇÀ» Ç¥½ÃÇÏ±âÀ§ÇØ ³Î¸® »ç¿ëµÇ¾ú½À´Ï´Ù.</p>
-<p>ÀÌ ÆÐÅÏÀº ¾Èµå·ÎÀÌµå 3.0¿¡¼­ ¹Ù²î¾ú½À´Ï´Ù. ±æ°Ô´©¸£±â Á¦½ºÃÄ´Â ÀÌÁ¦ ÄÁÅØ½ºÆ® ¾×¼Ç ¹Ù(CAB)·Î ºÒ¸®¿ì´Â »õ·Î¿î ¿ä¼Ò¿¡ µé¾îÀÖ´Â µ¥ÀÌÅÍ ¼±ÅÃ, ÄÁÅØ½ºÆ® ¾×¼Ç, ¼±ÅÃ °ü¸® ±â´ÉÀ» À§ÇØ ¾²¿©Áý´Ï´Ù. </p>
+<h4>ë¬´ì—‡ì´ ë°”ë€Œì—ˆëŠ”ê°€?</h4>
+<p>ì´ì „ë²„ì „ì˜ ì•ˆë“œë¡œì´ë“œì—ì„œ, ê¸¸ê²Œëˆ„ë¥´ê¸° ì œìŠ¤ì³ëŠ” ì»¨í…ìŠ¤íŠ¸ ë©”ë‰´ì— ì„ íƒëœ ì•„ì´í…œì˜ ì»¨ì„¹íŠ¸ìŠ¤ ì•¡ì…˜ì„ í‘œì‹œí•˜ê¸°ìœ„í•´ ë„ë¦¬ ì‚¬ìš©ë˜ì—ˆìŠµë‹ˆë‹¤.</p>
+<p>ì´ íŒ¨í„´ì€ ì•ˆë“œë¡œì´ë“œ 3.0ì—ì„œ ë°”ë€Œì—ˆìŠµë‹ˆë‹¤. ê¸¸ê²Œëˆ„ë¥´ê¸° ì œìŠ¤ì³ëŠ” ì´ì œ ì»¨í…ìŠ¤íŠ¸ ì•¡ì…˜ ë°”(CAB)ë¡œ ë¶ˆë¦¬ìš°ëŠ” ìƒˆë¡œìš´ ìš”ì†Œì— ë“¤ì–´ìžˆëŠ” ë°ì´í„° ì„ íƒ, ì»¨í…ìŠ¤íŠ¸ ì•¡ì…˜, ì„ íƒ ê´€ë¦¬ ê¸°ëŠ¥ì„ ìœ„í•´ ì“°ì—¬ì§‘ë‹ˆë‹¤. </p>
 
   </div>
   <div class="layout-content-col span-7">
 
     <img src="../media/selection_context_menu.png"><div class="figure-caption">
-      ÄÁÅØ½ºÆ® ¸Þ´º¸¦ º¸¿©ÁÖ±âÀ§ÇÑ ±æ°Ô´©¸£±â Á¦½ºÃÄÀÇ ÀüÅëÀûÀÎ »ç¿ë.
+      ì»¨í…ìŠ¤íŠ¸ ë©”ë‰´ë¥¼ ë³´ì—¬ì£¼ê¸°ìœ„í•œ ê¸¸ê²Œëˆ„ë¥´ê¸° ì œìŠ¤ì³ì˜ ì „í†µì ì¸ ì‚¬ìš©.
     </div>
 
   </div>
 </div>
 
 
-<h4>ÄÁÅØ½ºÆ® ¾×¼Ç ¹Ù (CAB)ÀÇ »ç¿ë</h4>
+<h4>ì»¨í…ìŠ¤íŠ¸ ì•¡ì…˜ ë°” (CAB)ì˜ ì‚¬ìš©</h4>
 
-<p>¼¿·º¼Ç CAB´Â µ¥ÀÌÅÍ°¡ ¼±ÅÃµÇ¾îÀÖ´Â µ¿¾È ¿©·¯ºÐÀÇ ÇöÀç ¾×¼Ç¹Ù À§¿¡ ¿À¹ö·¹ÀÌµÇ´Â ÀÓ½Ã ¾×¼Ç¹Ù ÀÔ´Ï´Ù. CAB´Â »ç¿ëÀÚ°¡ ¼±ÅÃ °¡´ÉÇÑ µ¥ÀÌÅÍ¸¦ ±æ°Ô´©¸£±â ÇÑ ´ÙÀ½¿¡ Ç¥½ÃµË´Ï´Ù.</p>
+<p>ì…€ë ‰ì…˜ CABëŠ” ë°ì´í„°ê°€ ì„ íƒë˜ì–´ìžˆëŠ” ë™ì•ˆ ì—¬ëŸ¬ë¶„ì˜ í˜„ìž¬ ì•¡ì…˜ë°” ìœ„ì— ì˜¤ë²„ë ˆì´ë˜ëŠ” ìž„ì‹œ ì•¡ì…˜ë°” ìž…ë‹ˆë‹¤. CABëŠ” ì‚¬ìš©ìžê°€ ì„ íƒ ê°€ëŠ¥í•œ ë°ì´í„°ë¥¼ ê¸¸ê²Œëˆ„ë¥´ê¸° í•œ ë‹¤ìŒì— í‘œì‹œë©ë‹ˆë‹¤.</p>
 
 
 <img src="../media/selection_cab_big.png">
@@ -39,11 +39,11 @@ title: ¼¿·º¼Ç
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<p>¿©±â¼­ »ç¿ëÀÚ°¡ ÇÒ ¼ö ÀÖ´Â °Í:</p>
+<p>ì—¬ê¸°ì„œ ì‚¬ìš©ìžê°€ í•  ìˆ˜ ìžˆëŠ” ê²ƒ:</p>
 <ul>
-<li>¾ÆÀÌÅÛÀ» ÅÍÄ¡ÇØ¼­ Ãß°¡ÀûÀ¸·Î ¾ÆÀÌÅÛÀ» ¼±ÅÃÇÏ¼¼¿ä.</li>
-<li>ÇÏÀÌ¶óÀÌÆ®µÈ ¸ðµç µ¥ÀÌÅÍ ¾ÆÀÌÅÛµé¿¡°Ô CAB¿¡ ÀÖ´Â ¾×¼ÇÀ» ¼öÇàÇÏ¼¼¿ä. ÀÌÈÄ CAB´Â ÀÚµ¿ÀûÀ¸·Î »ç¶óÁý´Ï´Ù.</li>
-<li>Back ¹öÆ° ¶Ç´Â CABÀÇ Ã¼Å©¸¶Å© ¹öÆ°À¸·Î CAB¸¦ »ç¶óÁö°Ô ÇÏ¼¼¿ä. ¼±ÅÃµÇ¾ú´ø ¸ðµç ÇÏÀÌ¶óÀÌÆ®µéµµ CAB¿Í ÇÔ²² »ç¶óÁý´Ï´Ù.</li>
+<li>ì•„ì´í…œì„ í„°ì¹˜í•´ì„œ ì¶”ê°€ì ìœ¼ë¡œ ì•„ì´í…œì„ ì„ íƒí•˜ì„¸ìš”.</li>
+<li>í•˜ì´ë¼ì´íŠ¸ëœ ëª¨ë“  ë°ì´í„° ì•„ì´í…œë“¤ì—ê²Œ CABì— ìžˆëŠ” ì•¡ì…˜ì„ ìˆ˜í–‰í•˜ì„¸ìš”. ì´í›„ CABëŠ” ìžë™ì ìœ¼ë¡œ ì‚¬ë¼ì§‘ë‹ˆë‹¤.</li>
+<li>Back ë²„íŠ¼ ë˜ëŠ” CABì˜ ì²´í¬ë§ˆí¬ ë²„íŠ¼ìœ¼ë¡œ CABë¥¼ ì‚¬ë¼ì§€ê²Œ í•˜ì„¸ìš”. ì„ íƒë˜ì—ˆë˜ ëª¨ë“  í•˜ì´ë¼ì´íŠ¸ë“¤ë„ CABì™€ í•¨ê»˜ ì‚¬ë¼ì§‘ë‹ˆë‹¤.</li>
 </ul>
 </div>
   <div class="layout-content-col span-7">
@@ -56,7 +56,7 @@ title: ¼¿·º¼Ç
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>CAB ¾×¼ÇµéÀÇ ¼±ÅÃ</h4>
+<h4>CAB ì•¡ì…˜ë“¤ì˜ ì„ íƒ</h4>
 <p>You can decide which actions and elements appear in the CAB. Use the guidelines in the <a href="actionbar.html">Action Bar
 pattern</a> to decide which items to surface at the top level and which to move to the
 action overflow.</p>
@@ -74,7 +74,6 @@ selected data items of the same kind.</p>
 
   </div>
 </div>
-
 
 <h2 id="checklist">Checklist</h2>
 
