--- a/style/typography.html
+++ b/style/typography.html
@@ -9,9 +9,9 @@ title: 글꼴
 </div>
   <div class="layout-content-col span-5">
 
-<p>안드로이드 디자인 언어는 스케일, 공백, 리듬, 기준선 격자와 같은 전통적인 글꼴 도구에 의존하고 있습니다.
+<p>안드로이드 디자인 언어는 스케일, 여백, 리듬, 기준선 격자와 같은 전통적인 글꼴 도구에 의존하고 있습니다.
 이러한 글꼴 도구는 사용자가 빠르게 화면 상의 정보를 이해할 수 있도록 돕는데 매우 중요합니다.
-이와 같은 글꼴를 지원하기 위해 아이스크림 샌드위치는
+이와 같은 글꼴을 지원하기 위해 아이스크림 샌드위치는
 UI 요구사항과 고해상도 화면을 위해 특별히 고안된 로보토(Roboto)라 이름한 새로운 글꼴을 소개했습니다.
 현재 TextView 프레임워크는 일반, 볼드, 이탤릭, 그리고 볼드 이탤릭을 기본으로 지원합니다.</p>
 
@@ -37,12 +37,12 @@ UI 요소 안에서 사용될 경우 터치 피드백 상태 또한 지원합니
   <div class="layout-content-col span-6">
 
 <h4>글꼴 크기</h4>
-<p>정상적인 레이아웃에서 글자 크기를 대비시키는 것은 정돈을 위해 도움이 될 수 있습니다.
-그래도 같은 UI 내의 너무 다양한 글자 크기는 지저분하게 느껴질 수 있습니다.
-따라서 안드로이드 프레임워크는 다음과 같은 제한된 글자 크기 세트를 사용하고 있습니다:</p>
+<p>정상적인 레이아웃에서 글자 크기를 대비시키는 것은 레이아웃 정돈에 어느 정도 도움이 될 수는 있습니다.
+그래도 같은 UI 내에 너무 다양한 글자 크기를 사용하는 것은 지저분하게 느껴질 수 있습니다.
+따라서 안드로이드 프레임워크는 다음과 같은 제한된 수의 글꼴 크기 세트를 사용하고 있습니다:</p>
 
 <img src="../media/typography_sizes.png"><p>사용자는 설정 앱에서 시스템 전역에 적용되는 글꼴 확대 수준을 선택할 수 있습니다.
-이러한 접근성 기능을 지원하려면 가능한 부분은 모두 스케일 독립 픽셀(<acronym title="Scale-independent pixels. 사용자가 전역 텍스트 크기를 100%로 설정했을 경우 1sp는 160dp에서 1픽셀.">sp</acronym>) 타입으로 지정되어야 합니다.
+글꼴이 이러한 접근성 기능을 지원하려면, 가능한 부분은 모두 스케일 독립 픽셀(<acronym title="Scale-independent pixels. 사용자가 전역 텍스트 크기를 100%로 설정했을 경우 1sp는 160dp에서 1픽셀.">sp</acronym>) 타입으로 지정되어야 합니다.
 확대 가능한 타입으로 지정된 레이아웃은 이러한 설정에 대한 테스트가 필요합니다.</p>
 
   </div>
