building-blocks/lists.html is fully translated.

--- a/building-blocks/lists.html
+++ b/building-blocks/lists.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Lists
+title: 목록
 ---
-<p>Lists present multiple line items in a vertical arrangement. They can be used for data selection as
-well as drilldown navigation.</p>
+<p>목록은 여러 줄의 항목을 세로로 정렬해서 보여줍니다. 항목은 하위 탐색뿐만 아니라 데이터를 선택
+할 때에도 사용할 수 있습니다.</p>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -18,14 +18,14 @@ well as drilldown navigation.</p>
 
 <ol>
 <li>
-<h4>Section Divider</h4>
-<p>Use section dividers to organize the content of your list into groups and facilitate scanning.</p>
+<h4>섹션 구분선</h4>
+<p>목록의 내용을 그룹으로 묶고 살펴보기를 간편하게 하기 위해 섹션 구분선을 사용합니다.</p>
 </li>
 <li>
-<h4>Line Items</h4>
-<p>List items can accommodate a wide range of data types in different arrangements, including
- simple single-line items, multi-line items, and custom items with icons, checkboxes, and action
- buttons.</p>
+<h4>라인 항목</h4>
+<p>목록 항목은 각기 다른 모습으로 정렬하여 단순한 한줄 항목, 여러줄 항목, 아이콘이 있는
+사용자정의 항목, 체크박스(checkbox), 그리고 동작 버튼을 포함하여 다양한 데이터 형태를  
+수용할 수 있습니다.</p>
 </li>
 </ol>
 </div>
