앱 구조의 최상위 수준 번역.

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -46,15 +46,15 @@ title: 애플리케이션 구조
 </div>
 
 
-<h2 id="top-level">Top Level</h2>
+<h2 id="top-level">최상위 수준</h2>
 
 
-<p>The layout of your start screen requires special attention. This is the first screen people see
-after launching your app, so it should be an equally rewarding experience for new and frequent
-visitors alike.</p>
+<p>시작 화면의 레이아웃은 특별한 관심이 필요합니다. 시작 화면은 앱이
+수행된 후 사용자가 보는 첫 화면입니다. 그렇기 때문에 시작 화면은
+새로운 사용자와 기존 이용자 모두에게 좋은 사용자 경험을 주어야 합니다.</p>
 
-<p>Ask yourself: "What are my typical users most likely going to want to do in my app?", and structure
-your start screen experience accordingly.</p>
+<p>자신에게 물어보세요: "보통의 유저가 내 앱에서 하길 원하는게
+뭘까요?" 그리고 거기에 맞추어 첫 화면의 사용자 경험을 구성하세요.</p>
 
 
 <div class="layout-content-row">
