--- a/patterns/selection.html
+++ b/patterns/selection.html
@@ -20,7 +20,7 @@ title: 셀렉션
   <div class="layout-content-col span-7">
 
     <img src="../media/selection_context_menu.png"><div class="figure-caption">
-      컨텍스트 메뉴를 보여주기위한 길게누르기 제스쳐의 전통적인 사용.
+      컨텍스트 메뉴를 보여주기위한 길게누르기 제스쳐의 전형적인 사용.
     </div>
 
   </div>
@@ -56,42 +56,36 @@ title: 셀렉션
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>CAB 액션들의 선택</h4>
-<p>You can decide which actions and elements appear in the CAB. Use the guidelines in the <a href="actionbar.html">Action Bar
-pattern</a> to decide which items to surface at the top level and which to move to the
-action overflow.</p>
-<h4>Dynamically adjust CAB actions</h4>
-<p>In most cases you need to adjust the actions in the CAB dynamically as the user adds more items to
-the selection. Actions that apply to a single selected data item don't necessarily apply to multiple
-selected data items of the same kind.</p>
+<h4>CAB 액션들 선택하기</h4>
+<p>여러분들은 CAB에 표시할 액션과 요소들을 결정 할 수 있습니다. 어느 아이템이 꼭데기에 위치할지,액션 오버플로우에 위치할지를 결정하기위해 <a href="actionbar.html">액션 바 패턴</a> 가이드라인을 사용하세요.</p>
+<h4>CAB 액션 동적으로 변경하기</h4>
+<p>사용자가 셀렉션에 아이템을 더 추가하는 대부분의 경우, 여러분들은 CAB의 액션들을 동적으로 변경해야만 합니다. 
+하나만 선택된 데이터 아이템에 적용하는 액션들이 다중 선택된 같은 종류의 데이터 아이템에 적용되지는 없습니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
 
     <img src="../media/selection_adjusting_actions.png"><div class="figure-caption">
-      Adjusting actions in the CAB as additional items are selected.
+      추가 아이템이 선택된 경우에 CAB의 액션들이 변경됨.
     </div>
 
   </div>
 </div>
 
-<h2 id="checklist">Checklist</h2>
+<h2 id="checklist">체크리스트</h2>
 
 
 <ul>
 <li>
-<p>Whenever your app supports the selection of multiple data items, make use of the contextual action
-  bar (CAB).</p>
+<p>여러분의 앱이 다중 데이터 아이템 선택을 지원할 때마다, 컨택스트 액션 바(CAB)를 사용하십시요.</p>
 </li>
 <li>
-<p>Reserve the long press gesture for selection exclusively. Don't use it to display traditional
-  contextual menus.</p>
+<p>길게누르기 제스쳐를 배타적으로 남겨두세요. 전형적인 컨텍스트 메뉴를 표시하는 방법으로 사용하지 마세요.</p>
 </li>
 <li>
-<p>If you don't support multi-selection within a list, long press should do nothing.</p>
+<p>만약 리스트에서 다중 선택을 지원하지 않는 다면, 길게누르기는 아무 것도 하지않게 두세요.</p>
 </li>
 <li>
-<p>Plan the actions you want to display inside of a CAB in the same way you would plan the actions
-  inside your app's action bar.</p>
+<p>여러분들이 여러분의 액션바에 넣으려고 계획했던 액션들과 같은 방식으로 CAB에 표시하고 싶은 액션들을 계획하세요.</p>
 </li>
 </ul>
